--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,6 @@
             "Tv2regionerne\\StatamicIframely\\": "src"
         }
     },
-    "require": {
-        "statamic/cms": "^4.0"
-    },
     "extra": {
         "statamic": {
             "name": "Statamic Iframely",
@@ -23,6 +20,14 @@
             "providers": [
                 "Tv2regionerne\\StatamicIframely\\ServiceProvider"
             ]
+        }
+    },
+    "require": {
+        "statamic/cms": "^4.0 || ^5.0"
+    },
+    "config": {
+        "allow-plugins": {
+            "pixelfear/composer-dist-plugin": true
         }
     }
 }
